fix date being wrapped in mobile viewport

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -162,6 +162,7 @@ li {
 
 .date {
   color: $overlay1;
+  white-space: nowrap;
 }
 
 pre .shiki {
